yaml/mm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
spec:
  ports:
    - name: http
      port: 8000
  selector:
    role: mattermost
#  type: "LoadBalancer"
